# miniprova-ms

./: .gitignore  README.md  docker-compose.yml  requirements.md
auth/: .env.compose  Cargo.toml  Dockerfile
auth/migrations/: 20240517145059_add_users.up.sql  20240517175353_add_roles.up.sql  20240518011238_add_avatar.down.sql  20240518011238_add_avatar.up.sql
auth/src/: db.rs  eureka.rs  main.rs  middleware.rs  schema.rs
auth/src/auth/: controller.rs  crypto.rs  dto.rs  mod.rs  models.rs  service.rs
auth/src/avatar/: controller.rs  dto.rs  mod.rs  model.rs  repository.rs  service.rs
auth/src/role/: mod.rs  model.rs
auth/src/user/: controller.rs  dto.rs  model.rs  repository.rs  service.rs
class/: .env.compose  Cargo.toml  Dockerfile
class/migrations/2024-05-18-170835_add_class/: up.sql
class/src/: api.rs  eureka.rs  main.rs  middleware.rs  schema.rs
class/src/auth/: models.rs
class/src/class/: controller.rs  model.rs  repository.rs
class/src/role/: enm.rs
client/: middleware.ts
client/app/(dashboard)/: page.tsx  user.tsx
client/app/(dashboard)/classes/: classes-table.tsx  page.tsx
client/app/(dashboard)/enrollment/: classes-table.tsx  enrolled-class.tsx  unenrolled-class.tsx
client/app/(dashboard)/exams/: exam.tsx
client/app/(dashboard)/questions/: page.tsx  question.tsx  questions-table.tsx
client/app/(dashboard)/student-exams/: done-exam.tsx  page.tsx
client/app/(dashboard)/teacher-exams/: open-exam.tsx
client/app/(dashboard)/users/: users-table.tsx
client/app/login/: page.tsx
client/components/ui/: add-class-exam.tsx  edit-class-form.tsx  exam-form.tsx
client/lib/: api.ts  auth.ts
eureka-server/: Dockerfile
exam/: .env.compose  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
exam/migrations/2024-05-18-170835_add_class/: down.sql
exam/migrations/2024-05-19-105536_add_class_exams/: up.sql
exam/migrations/2024-05-19-113855_add_exam_questions/: down.sql
exam/migrations/2024-05-19-144620_student_answer/: down.sql  up.sql
exam/migrations/2024-07-28-165536_add_class_exams/: down.sql  up.sql
exam/migrations/2024-07-30-113855_add_exam_questions/: up.sql
exam/src/: api.rs  db.rs  errors.rs  eureka.rs  main.rs  middleware.rs  schema.rs
exam/src/class/: controller.rs  dto.rs  repository.rs  service.rs
exam/src/exam/: controller.rs  dto.rs  model.rs  repository.rs  service.rs
question/: .env.compose  Cargo.toml  Dockerfile  README.md
question/migrations/: 20240518184000_exam.down.sql  20240518184000_exam.up.sql
question/src/: eureka.rs  main.rs  schema.rs
question/src/auth/: models.rs
question/src/exam/: controller.rs  dto.rs  mod.rs  models.rs  repository.rs  service.rs
question/src/question/: controller.rs  dto.rs  mod.rs  models.rs  repository.rs  service.rs
question/src/role/: mod.rs
questions-fe/: .env.example  middleware.ts
questions-fe/app/: layout.tsx
questions-fe/app/(dashboard)/: error.tsx  layout.tsx  user.tsx
questions-fe/components/ui/: class-form.tsx  edit-exam-form.tsx  edit-question-form.tsx  question-form.tsx
questions-fe/lib/: api.ts  auth.ts  utils.ts
questions-fe/types/: next-auth.d.ts
zuul-server/: Dockerfile  pom.xml
(+22 files in other folders)
