[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.10", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
r2d2 = "0.8.10"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
actix-web = "4"
env_logger = "0.11.3"
once_cell = "1.19.0"
derive_more = "0.99.17"
lazy_static = "1.4.0"
bcrypt = "0.15.1"
rand = "0.8.5"
jsonwebtoken = "9.3.0"
actix-session = "0.9.0"
futures-util = "0.3.30"
reqwest = { version = "0.12.5", features = ["json"] }
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["time", "macros"] }
eureka-client = "0.0.4"
local-ip-address = "0.6.1"
